# lsb

./: .editorconfig  ReadMe.md  init-functions  lsb-base-logging-ubuntu.sh  lsb_release  lsb_release.py  pyproject.toml
debian/: README.Debian  changelog  control  copyright  lsb-base.NEWS  lsb-base.install  lsb-release.links  postinst  prerm  rules
init-functions.d/: .gitignore  00-verbose.jinja
